--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,15 +1,54 @@
 # This is a basic workflow to help you get started with Actions
-
-name: Deploy BOA to Oracle
+name: Release
 
 # Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ main ]
+    branches: [main]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  release:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup Rust
+        uses: actions/setup-rust@v1
+        with:
+          rust-version: stable
+
+      - name: Install cross-compilation dependencies
+        run: sudo apt-get install -y gcc-aarch64-linux-gnu
+
+      - name: Build aarch64 target
+        run: cargo build --release --target aarch64-unknown-linux-gnu
+
+      - name: Install semantic-release
+        run: cargo install semantic-release
+
+      - name: Generate Tag
+        id: semrel
+        run: semantic-release --dry-run
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create Tag
+        uses: mathieudutour/github-tag-action@v5
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          tags: ${{ steps.semrel.outputs.next_tag }}
+          tag_prefix: ""
+
+      - name: Archive Release Artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: release-artifacts
+          path: target/aarch64-unknown-linux-gnu/release/boa
+
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
@@ -17,21 +56,21 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - name: Deploy using ssh
-      uses: appleboy/ssh-action@v1.0.0
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.PRIVATE_KEY }}
-        port: 22
-        script: |
-          /bin/bash
-          cd ~
-          source .profile
-          source .bashrc
-          cd ~/desarrollo/boa
-          git pull --rebase origin main
-          cargo build --release
-          sudo systemctl restart boa
-          exit
-          exit
+      - name: Deploy using ssh
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.PRIVATE_KEY }}
+          port: 22
+          script: |
+            /bin/bash
+            cd ~
+            source .profile
+            source .bashrc
+            cd ~/battlesnake/
+            curl -LO "https://github.com/${{ github.repository }}/releases/latest/download/boa"
+            chmod +x boa
+            sudo systemctl restart boa
+            exit
+            exit
