--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup Rust
-        uses: actions/setup-rust@v1
+        uses: ATiltedTree/setup-rust@v1
         with:
           rust-version: stable
 
