--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,7 +22,7 @@ jobs:
           rust-version: stable
 
       - name: Install cross-compilation dependencies
-        run: sudo apt-get install -y gcc-aarch64-linux-gnu
+        run: sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu
 
       - name: Build aarch64 target
         run: cargo build --release --target aarch64-unknown-linux-gnu
