--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,20 +27,15 @@ jobs:
       - name: Build aarch64 target
         run: cargo build --release --target aarch64-unknown-linux-gnu
 
-      - name: Install semantic-release
-        run: cargo install semantic-release
-
       - name: Generate Tag
-        id: semrel
-        run: semantic-release --dry-run
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        id: version
+        uses: ncipollo/semantic-version-action@v1
 
       - name: Create Tag
         uses: mathieudutour/github-tag-action@v5
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          tags: ${{ steps.semrel.outputs.next_tag }}
+          tags: ${{ steps.version.outputs.tag }}
           tag_prefix: ""
 
       - name: Archive Release Artifacts
