--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install cross-compilation dependencies
         run: sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu
 
+      - name: Install aarch64 aarch64-unknown-linux-gnu runtime
+        run: rustup target add aarch64-unknown-linux-gnu
+
       - name: Build aarch64 target
         run: cargo build --release --target aarch64-unknown-linux-gnu
 
