--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,25 +21,18 @@ jobs:
         with:
           rust-version: stable
 
-      - name: Install cross-compilation dependencies
-        run: sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu
-
-      - name: Install aarch64 aarch64-unknown-linux-gnu runtime
-        run: rustup target add aarch64-unknown-linux-gnu
-
       - name: Build aarch64 target
-        run: cargo build --release --target aarch64-unknown-linux-gnu
-
-      - name: Generate Tag
-        id: version
-        uses: ncipollo/semantic-version-action@v1
-
-      - name: Create Tag
-        uses: mathieudutour/github-tag-action@v5
+        uses: actions-rs/cargo@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          tags: ${{ steps.version.outputs.tag }}
-          tag_prefix: ""
+          use-cross: true
+          command: build
+          args: --release --target aarch64-unknown-linux-gnu
+
+      - name: Bump version and push tag
+        uses: anothrNick/github-tag-action@1.64.0 # Don't use @master or @v1 unless you're happy to test the latest version
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # if you don't want to set write permissions use a PAT token
+          WITH_V: true
 
       - name: Archive Release Artifacts
         uses: actions/upload-artifact@v2
